<resources>
    <string name="app_name">EventApp</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="event_image_desc">Deskripsi Image Event</string>
    <string name="penyelenggara">Penyelenggara :</string>
    <string name="sisa_kuota">Sisa kuota :</string>
    <string name="regist">Regist</string>
    <string name="waktu_selesai">Waktu Selesai :</string>
    <string name="waktu_mulai">Waktu Mulai :</string>
    <string name="offline">Anda offline. Periksa koneksi jaringan.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_favorite">Save Favorite\n</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="belum_ada_event_favorite">Belum ada event favorite!</string>
    <string name="title_favorite">Favorite\n</string>
</resources>